@@ -5,21 +5,15 @@ import com.flipkart.varadhi.config.RestOptions;
 import com.flipkart.varadhi.config.ServerConfiguration;
 import com.flipkart.varadhi.core.VaradhiTopicFactory;
 import com.flipkart.varadhi.core.VaradhiTopicService;
-import com.flipkart.varadhi.entities.StorageTopic;
 import com.flipkart.varadhi.exceptions.VaradhiException;
-import com.flipkart.varadhi.produce.config.ProducerOptions;
-import com.flipkart.varadhi.produce.otel.ProducerMetrics;
-import com.flipkart.varadhi.produce.otel.ProducerMetricsImpl;
-import com.flipkart.varadhi.produce.otel.ProducerMetricsNoOpImpl;
+import com.flipkart.varadhi.produce.otel.ProducerMetricHandler;
 import com.flipkart.varadhi.produce.services.ProducerService;
 import com.flipkart.varadhi.services.*;
 import com.flipkart.varadhi.spi.db.IamPolicyMetaStore;
 import com.flipkart.varadhi.spi.db.MetaStore;
 import com.flipkart.varadhi.spi.db.MetaStoreProvider;
 import com.flipkart.varadhi.spi.services.MessagingStackProvider;
-import com.flipkart.varadhi.spi.services.ProducerFactory;
-import com.flipkart.varadhi.web.AuthHandlers;
-import com.flipkart.varadhi.web.FailureHandler;
+import com.flipkart.varadhi.web.*;
 import com.flipkart.varadhi.web.routes.RouteBehaviour;
 import com.flipkart.varadhi.web.routes.RouteConfigurator;
 import com.flipkart.varadhi.web.routes.RouteDefinition;
@@ -27,10 +21,11 @@ import com.flipkart.varadhi.web.v1.HealthCheckHandler;
 import com.flipkart.varadhi.web.v1.admin.SubscriptionHandlers;
 import com.flipkart.varadhi.web.v1.admin.TopicHandlers;
 import com.flipkart.varadhi.web.v1.authz.IamPolicyHandlers;
+import com.flipkart.varadhi.web.v1.produce.HeaderValidationHandler;
 import com.flipkart.varadhi.web.v1.produce.ProduceHandlers;
 import io.micrometer.core.instrument.MeterRegistry;
+import io.opentelemetry.api.trace.Tracer;
 import io.vertx.core.Vertx;
-import io.vertx.ext.web.handler.BodyHandler;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.Collection;
@@ -60,7 +55,8 @@ public abstract class VerticleDeployer {
             ServerConfiguration configuration,
             MessagingStackProvider messagingStackProvider,
             MetaStoreProvider metaStoreProvider,
-            MeterRegistry meterRegistry
+            MeterRegistry meterRegistry,
+            Tracer tracer
     ) {
         RestOptions restOptions = configuration.getRestOptions();
         String deployedRegion = restOptions.getDeployedRegion();
@@ -75,32 +71,50 @@ public abstract class VerticleDeployer {
                 new ProjectService(metaStore, restOptions.getProjectCacheBuilderSpec(), meterRegistry);
         this.topicHandlers =
                 new TopicHandlers(varadhiTopicFactory, varadhiTopicService, projectService);
-        ProducerService producerService =
-                setupProducerService(
-                        configuration.getProducerOptions(), messagingStackProvider.getProducerFactory(),
-                        varadhiTopicService, meterRegistry
-                );
+        ProducerService producerService = new ProducerService(deployedRegion, configuration.getProducerOptions(),
+                messagingStackProvider.getProducerFactory(), varadhiTopicService, meterRegistry
+        );
         this.orgService = new OrgService(metaStore);
         this.teamService = new TeamService(metaStore);
+        HeaderValidationHandler headerValidator = new HeaderValidationHandler(restOptions);
+        ProducerMetricHandler producerMetricsHandler = new ProducerMetricHandler(
+                configuration.getProducerOptions().isMetricEnabled(), meterRegistry);
 
         this.produceHandlers =
-                new ProduceHandlers(hostName, configuration.getRestOptions(), producerService, projectService);
-        this.subscriptionHandlers = new SubscriptionHandlers(new SubscriptionService(metaStore));
-        this.iamPolicyHandlersSupplier = getIamPolicyHandlersSuppliers(metaStore);
-
+                new ProduceHandlers(
+                        deployedRegion, headerValidator::validate, producerService, projectService,
+                        producerMetricsHandler
+                );
+        this.iamPolicyHandlersSupplier = getIamPolicyHandlersSupplier(projectService, metaStore);
+        this.subscriptionHandlers = new SubscriptionHandlers(new SubscriptionService(metaStore), projectService);
         this.healthCheckHandler = new HealthCheckHandler();
-        BodyHandler bodyHandler = BodyHandler.create(false);
+
+        AuthnHandler authnHandler = new AuthnHandler(vertx, configuration);
+        AuthzHandler authzHandler = new AuthzHandler(configuration);
+        RequestTraceAndLogHandler
+                requestTraceAndLogHandler =
+                new RequestTraceAndLogHandler(restOptions.isTraceRequestEnabled(), new SpanProvider(tracer));
         // payload size restriction is required for Produce APIs. But should be fine to set as default for all.
-        bodyHandler.setBodyLimit(configuration.getRestOptions().getPayloadSizeMax());
-        this.behaviorConfigurators.put(RouteBehaviour.hasBody, (route, routeDef) -> route.handler(bodyHandler));
-        this.behaviorConfigurators.put(RouteBehaviour.authenticated, new AuthHandlers(vertx, configuration));
+        RequestBodyHandler requestBodyHandler = new RequestBodyHandler(restOptions.getPayloadSizeMax());
+        RequestBodyParser bodyParser = new RequestBodyParser();
+        HierarchyHandler hierarchyHandler = new HierarchyHandler();
+        this.behaviorConfigurators.put(RouteBehaviour.authenticated, authnHandler);
+        this.behaviorConfigurators.put(RouteBehaviour.hasBody, (route, routeDef) -> route.handler(requestBodyHandler));
+        this.behaviorConfigurators.put(RouteBehaviour.parseBody, bodyParser);
+        this.behaviorConfigurators.put(RouteBehaviour.addHierarchy, hierarchyHandler);
+        this.behaviorConfigurators.put(RouteBehaviour.authorized, authzHandler);
+        this.behaviorConfigurators.put(RouteBehaviour.requestTraceAndLog, requestTraceAndLogHandler);
     }
 
-    private static Supplier<IamPolicyHandlers> getIamPolicyHandlersSuppliers(MetaStore metaStore) {
+    private static Supplier<IamPolicyHandlers> getIamPolicyHandlersSupplier(
+            ProjectService projectService, MetaStore metaStore
+    ) {
         return () -> {
             if (metaStore instanceof IamPolicyMetaStore rbMetaStore) {
                 return new IamPolicyHandlers(
-                        new IamPolicyService(metaStore, rbMetaStore));
+                        projectService,
+                        new IamPolicyService(metaStore, rbMetaStore)
+                );
             }
             throw new IllegalStateException("MetaStore is not an instance of IamPolicyMetaStore.");
         };
@@ -114,13 +128,10 @@ public abstract class VerticleDeployer {
                         healthCheckHandler.get()
                 )
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void deployVerticle(
-            Vertx vertx,
-            ServerConfiguration configuration
-    ) {
+    public void deployVerticle(Vertx vertx, ServerConfiguration configuration) {
         List<RouteDefinition> handlerDefinitions = getRouteDefinitions();
         if (shouldEnableAuthZHandlers(configuration)) {
             handlerDefinitions.addAll(iamPolicyHandlersSupplier.get().get());
@@ -139,18 +150,6 @@ public abstract class VerticleDeployer {
                     throw new VaradhiException("Failed to Deploy Rest API.", t);
                 })
                 .onSuccess(name -> log.debug("Successfully deployed the Verticle id({}).", name));
-    }
-
-    private ProducerService setupProducerService(
-            ProducerOptions producerOptions,
-            ProducerFactory<StorageTopic> producerFactory,
-            VaradhiTopicService varadhiTopicService,
-            MeterRegistry meterRegistry
-    ) {
-        ProducerMetrics producerMetrics = producerOptions.isMetricEnabled() ? new ProducerMetricsImpl(meterRegistry) :
-                new ProducerMetricsNoOpImpl();
-        return new ProducerService(
-                producerOptions, producerFactory, producerMetrics, varadhiTopicService, meterRegistry);
     }
 
     private boolean shouldEnableAuthZHandlers(ServerConfiguration configuration) {
